# wifi-scan

./: .gitignore  LICENSE  README.md  pyproject.toml  wifi-scan.py
tests/: test_config.py  test_crypto.py  test_detection.py  test_lookup.py  test_output.py  test_tui.py
wifi_scan/: __init__.py  __main__.py  cli.py  config.py  constants.py  crypto.py  detection.py  gps.py  gui_server.py  lookup.py  output.py  scanner.py  tui.py  utils.py
wifi_scan/data/: oui.json  vendor_ies.json
