[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "wifi-scan"
version = "1.5.0"
description = "802.11 WiFi scanner with monitor-mode capture, MAC randomization detection, IE fingerprint correlation, and SQLite/CSV/JSON output"
authors = [
    {name = "7ANG0N1N3"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "scapy>=2.5.0",
]

[project.optional-dependencies]
gui = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
]
toml = [
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
wifi-scan = "wifi_scan.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wifi_scan*"]

[tool.setuptools.package-data]
"wifi_scan.data" = ["*.json"]
